--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -10,7 +10,8 @@
   <body>
     <section>
       <a href="./index.html">Go to home</a>
-      <h1>Welcome to gallery</h1>
+      <h1>Welcome to page 3</h1>
     </section>
+    <script src="./js/1-gallery.js"></script>
   </body>
 </html>
