--- a/src/2-form.html
+++ b/src/2-form.html
@@ -10,7 +10,8 @@
   <body>
     <section>
       <a href="./index.html">Go to home</a>
-      <h1>Welcome to form</h1>
+      <h1>Welcome to page 3</h1>
     </section>
+    <script src="./js/2-form.js"></script>
   </body>
 </html>
