--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -10,8 +10,9 @@
   <body>
     <section>
       <a href="./index.html">Go to home</a>
-      <h1>Welcome to page 3</h1>
+      <h1>Welcome to page 2</h1>
+      <ul class="gallery"></ul>
     </section>
-    <script src="./js/1-gallery.js"></script>
+    <script type="module" src="./js/1-gallery.js"></script>
   </body>
 </html>
