--- a/src/2-form.html
+++ b/src/2-form.html
@@ -12,6 +12,6 @@
       <a href="./index.html">Go to home</a>
       <h1>Welcome to page 3</h1>
     </section>
-    <script src="./js/2-form.js"></script>
+    <script type="module" src="./js/2-form.js"></script>
   </body>
 </html>
