--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <nav>
-      <ul>
-        <li><a href="./1-gallery.html">Gallery</a></li>
-        <li><a href="./2-form.html">Form</a></li>
-      </ul>
-    </nav>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="./1-gallery.html">Gallery</a></li>
+          <li><a href="./2-form.html">Form</a></li>
+        </ul>
+      </nav>
+    </header>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
