feat: add solution

--- a/src/2-form.html
+++ b/src/2-form.html
@@ -12,6 +12,17 @@
       <a href="./index.html">Go to home</a>
       <h1>Welcome to page 3</h1>
     </section>
+    <form class="feedback-form js-feedback-form" autocomplete="off">
+      <label>
+        Email
+        <input type="email" name="email" autofocus />
+      </label>
+      <label>
+        Message
+        <textarea name="message" rows="8"></textarea>
+      </label>
+      <button type="submit">Submit</button>
+    </form>
     <script type="module" src="./js/2-form.js"></script>
   </body>
 </html>
